# bluetooth-hci

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  clippy.toml  test.sh
.github/workflows/: ci.yml
src/: bitflag_array.rs  fmt.rs  hci.rs  lib.rs  opcode.rs
src/event/: command.rs  mod.rs
src/hci/: cmd_link.rs  event_link.rs  mod.rs  uart.rs
src/host/: cmd_link.rs  event_link.rs  mod.rs  uart.rs
src/types/: advertisement.rs  advertising_interval.rs  common.rs  connection_interval.rs  expected_connection_length.rs  mod.rs  scan_window.rs
tests/: advertisement.rs  advertising_interval.rs  command_complete.rs  connection_interval.rs  event.rs  expected_connection_length.rs  host.rs  scan_window.rs
