[package]
edition = "2018"
name = "bluetooth-hci-async"
version = "0.1.1"
authors = [
    "Daniel Gallagher <pdanielgallagher@gmail.com>",
    "Ghaith Oueslati <ghaith.oueslati@gmail.com>",
]
categories = ["embedded", "hardware-support", "no-std", "async"]
description = "Implementation of the Bluetooth HCI"
keywords = ["ble", "bluetooth"]
license = "MIT/Apache-2.0"
repository = "https://github.com/OueslatiGhaith/bluetooth-hci"
readme = "README.md"

[dependencies]
byteorder = { version = "1.4.3", default_features = false }
defmt = { version = "0.3.5" }

[dev-dependencies]
tokio = { version = "1.28.2", features = ["rt", "rt-multi-thread", "macros"] }

[features]
default = ["version-5-0"]
version-4-1 = []
version-4-2 = []
version-5-0 = []
