[package]
edition = "2021"
name = "stm32wb-hci"
version = "0.1.4"
authors = [
    "Daniel Gallagher <pdanielgallagher@gmail.com>",
    "Ghaith Oueslati <ghaith.oueslati@enis.tn>",
]
categories = ["embedded", "hardware-support", "no-std", "async"]
description = "Implementation of the Bluetooth HCI for the STM32WB family"
keywords = ["ble", "bluetooth", "stm32"]
license = "MIT/Apache-2.0"
repository = "https://github.com/OueslatiGhaith/stm32wb-hci"
readme = "README.md"
exclude = ["tests"]

[dependencies]
bitflags = "2.4.1"
byteorder = { version = "1.5.0", default_features = false }
defmt = { version = "0.3", optional = true }

[dev-dependencies]
tokio = { version = "1.35", features = ["rt", "rt-multi-thread", "macros"] }

[features]
defmt = ["dep:defmt"]
